// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages termTime should render correctly 1`] = `
<Component
  description="Term Time selection page of the Create Fares Data Service"
  errors={Array []}
  title="Term Time - Create Fares Data Service"
>
  <CsrfForm
    action="/api/termTime"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <div
      className="govuk-form-group "
    >
      <fieldset
        aria-describedby="term-time-hint"
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--l"
        >
          <h1
            className="govuk-fieldset__heading"
          >
            Is this ticket only valid during term times?
          </h1>
        </legend>
        <span
          className="govuk-hint"
          id="term-time-hint"
        >
          Term dates should be specified in route and timetable data.
        </span>
        <FormElementWrapper
          errorClass="govuk-radios--error"
          errorId="term-time-yes"
          errors={Array []}
        >
          <div
            className="govuk-radios"
            id="term-time-radios"
          >
            <div
              className="govuk-radios__item"
            >
              <input
                className="govuk-radios__input  "
                id="term-time-yes"
                name="termTime"
                type="radio"
                value="Yes"
              />
              <label
                className="govuk-label govuk-radios__label"
                htmlFor="term-time-yes"
              >
                Yes
              </label>
            </div>
            <div
              className="govuk-radios__item"
            >
              <input
                className="govuk-radios__input  "
                id="term-time-no"
                name="termTime"
                type="radio"
                value="No"
              />
              <label
                className="govuk-label govuk-radios__label"
                htmlFor="term-time-no"
              >
                No
              </label>
            </div>
          </div>
        </FormElementWrapper>
      </fieldset>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;

exports[`pages termTime should render errors correctly 1`] = `
<Component
  description="Term Time selection page of the Create Fares Data Service"
  errors={
    Array [
      Object {
        "errorMessage": "Choose an option below",
        "id": "term-time-yes",
      },
    ]
  }
  title="Term Time - Create Fares Data Service"
>
  <CsrfForm
    action="/api/termTime"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Choose an option below",
            "id": "term-time-yes",
          },
        ]
      }
    />
    <div
      className="govuk-form-group govuk-form-group--error"
    >
      <fieldset
        aria-describedby="term-time-hint"
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--l"
        >
          <h1
            className="govuk-fieldset__heading"
          >
            Is this ticket only valid during term times?
          </h1>
        </legend>
        <span
          className="govuk-hint"
          id="term-time-hint"
        >
          Term dates should be specified in route and timetable data.
        </span>
        <FormElementWrapper
          errorClass="govuk-radios--error"
          errorId="term-time-yes"
          errors={
            Array [
              Object {
                "errorMessage": "Choose an option below",
                "id": "term-time-yes",
              },
            ]
          }
        >
          <div
            className="govuk-radios"
            id="term-time-radios"
          >
            <div
              className="govuk-radios__item"
            >
              <input
                className="govuk-radios__input govuk-input--error "
                id="term-time-yes"
                name="termTime"
                type="radio"
                value="Yes"
              />
              <label
                className="govuk-label govuk-radios__label"
                htmlFor="term-time-yes"
              >
                Yes
              </label>
            </div>
            <div
              className="govuk-radios__item"
            >
              <input
                className="govuk-radios__input govuk-input--error "
                id="term-time-no"
                name="termTime"
                type="radio"
                value="No"
              />
              <label
                className="govuk-label govuk-radios__label"
                htmlFor="term-time-no"
              >
                No
              </label>
            </div>
          </div>
        </FormElementWrapper>
      </fieldset>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;
